# NativeProjectRunner

.github/workflows/: android.yml
Android/: build.gradle  gradle.properties  settings.gradle
Android/app/: build.gradle
Android/app/src/main/cpp/: CMakeLists.txt  android_platform.cpp  jni_bridge.cpp
Android/app/src/main/java/io/canccode/nativeprojectrunner/: MainActivity.kt  NativeBridge.kt  ProjectPicker.kt  ProjectSession.kt
Android/app/src/main/res/layout/: activity_main.xml
engine/: CMakeLists.txt
engine/include/: engine_api.h  engine_types.h  project_api.h
engine/src/: engine.cpp  project_loader.cpp  sandbox.cpp  wasm_runtime.cpp
runtime/: prepare_assets.sh
